Finished 'main' and 'footer' blocks

--- a/index.html
+++ b/index.html
@@ -80,7 +80,30 @@
 							<ul class="projects__list">
 								<li class="projects__item">
 									<a href="#" class="projects__link">
-										
+										<div class="projects__pic" style="	background-image: url('img/content/Yacht.png');">
+											<img src="img/content/Yacht.png" alt="" class="projects__img">
+										</div>
+										<div class="projects__name">Project: Yacht rentel</div>
+									</a>
+								</li>
+								<li class="projects__item">
+									<a href="#" class="projects__link">
+										<div class="projects__pic" style="	background-image: url('img/content/iphone4.png');">
+											<img src="img/content/iphone4.png" alt="" class="projects__img">
+										</div>
+										<div class="projects__name">
+											Project: Yacht rentel
+										</div>
+									</a>
+								</li>
+								<li class="projects__item">
+									<a href="#" class="projects__link">
+										<div class="projects__pic" style="	background-image: url('img/content/cap.png');">
+											<img src="img/content/cap.png" alt="" class="projects__img">
+										</div>
+										<div class="projects__name">
+											Project: Yacht rentel
+										</div>
 									</a>
 								</li>
 							</ul>
@@ -91,7 +114,11 @@
 		</main> <!-- end main -->
 	</div> <!-- end wrapper -->
 	<footer class="footer">
-		
+		<div class="container">
+			<div class="designed">
+				<div class="designed__text">Designed by cssauthor.com</div>
+			</div>
+		</div>
 	</footer>
 </body>
 </html>
