Adaptive design for tablets is finished

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 			<div class="header__top">
 				<div class="container">
 					<div class="logo">
-						<div class="logo__text">Kr</div>
+						<a href="#" class="logo__link">
+							<div class="logo__text">Kr</div>
+						</a>
 					</div>
 					<nav class="navigation">
 						<ul class="navigation__list">
@@ -57,8 +59,8 @@
 			<div class="main__top">	
 				<div class="container">
 					<div class="author">
-						<div class="author__photo" style="	background-image: url('img/content/actor.jpg');">
-							<img src="img/content/actor.jpg" alt="" class="author__img">	
+						<div class="author__photo" style="	background-image: url('img/content/photo.png');">
+							<img src="img/content/photo.png" alt="" class="author__img">	
 						</div>
 						<div class="author__information">
 							<div class="author__name">Krishnanunni</div>
